[package]
name = "powerdown-wiki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version="0.8.4", default-features = false}
worker = { version = "0.6.1", features = ["d1", "axum"] }
openidconnect = "4.0.1"
tera = "1"
lazy_static = "1.5.0"
ammonia = "4.1.1"
wasm-bindgen-futures = "0.4"
tower-service = "0.3.3"
serde = "1.0.219"
