[package]
name = "powerdown-wiki"
version = "0.1.0"
edition = "2021"
authors = ["optimisticlucio <73440828+optimisticlucio@users.noreply.github.com>"]

[dependencies]
tower-service = "0.3.3"
openidconnect = "4.0.1"
lazy_static = "1.5.0"
ammonia = "4.1.1"
serde = "1.0.219"
css-minify = "0.5.2"
tokio = { version = "1.47.1", features = ["full"] }
axum = {version = "0.8.4", features=["multipart"]}
postgres = "0.19.10"
tower = "0.5.2"
askama = { version = "0.14.0" }
tower-http = {version = "0.6.6", features = ["fs", "normalize-path"]}
rand = "0.9.2"
chrono = {version = "0.4.41", features = ["now"]}
comrak = "0.41.0"
axum-extra = "0.10.1"
deadpool-postgres = "0.14.1"
tokio-postgres = "0.7.13"
aws-config = { version= "1.8.5", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.90.0"
tower-layer = "0.3.3"
deadpool = "0.12.2"
postgres-types = { version= "0.2.9", features = ["derive"]}
bon = "3.7.2"
aws-sdk-s3 = "1.106.0"
