[package]
name = "powerdown-wiki"
version = "0.1.0"
edition = "2021"
authors = ["optimisticlucio <73440828+optimisticlucio@users.noreply.github.com>"]

[dependencies]
powerdown-wiki-macros = { path = "./powerdown-wiki-macros" }
tower-service = "0.3.3"
openidconnect = "4.0.1"
lazy_static = "1.5.0"
ammonia = "4.1.1"
serde = "1.0.219"
css-minify = "0.5.2"
tokio = { version = "1.47.1", features = ["full"] }
axum = {version = "0.8.4", features=["multipart", "original-uri", "macros"]}
postgres = {version="0.19.10", features= ["with-chrono-0_4"]}
tower = "0.5.2"
askama = { version = "0.14.0" }
tower-http = {version = "0.6.6", features = ["fs", "normalize-path", "compression-gzip", "compression-zstd", "compression-deflate", "compression-br"]}
rand = "0.9.2"
chrono = {version = "0.4.41", features = ["now", "serde"]}
comrak = "0.44.0"
axum-extra = "0.10.1"
deadpool-postgres = "0.14.1"
tokio-postgres = "0.7.13"
aws-config = { version= "1.8.5", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.90.0"
tower-layer = "0.3.3"
deadpool = "0.12.2"
postgres-types = { version= "0.2.9", features = ["derive"]}
aws-sdk-s3 = "1.106.0"
derive_builder = "0.20.2"
serde_json = "1.0.145"
regex = "1.11.3"
tower-cookies = "0.11.0"
image = "0.25.8"
rayon = "1.11.0"
http = "1.3.1"
oauth2 = "5.0.0"
url = "2.5.7"
urlencoding = "2.1.3"
reqwest = { version = "0.13.1", features = ["json", "form"] }
jsonwebtoken = {version="10.2.0", features=["rust_crypto"]}
