[package]
name = "powerdown-wiki"
version = "0.1.0"
edition = "2021"
authors = ["optimisticlucio <73440828+optimisticlucio@users.noreply.github.com>"]

[dependencies]
ammonia = "4.1.1"
askama = { version = "0.15.0" }
aws-config = { version = "1.8.5", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.106.0"
axum = { version = "0.8.4", features = ["multipart", "original-uri", "macros"] }
axum-extra = "0.10.1"
chrono = { version = "0.4.41", features = ["now", "serde"] }
comrak = "0.44.0"
deadpool = "0.12.2"
deadpool-postgres = "0.14.1"
derive_builder = "0.20.2"
http = "1.3.1"
image = "0.25.8"
infer = "0.19.0"
lazy_static = "1.5.0"
mime_guess = "2.0.5"
postgres = { version = "0.19.10", features = ["with-chrono-0_4"] }
postgres-types = { version = "0.2.9", features = ["derive"] }
rand = "0.9.2"
refinery = { version = "0.9.0", features = ["tokio-postgres"] }
regex = "1.11.3"
reqwest = { version = "0.13.1", features = ["json", "form"] }
serde = "1.0.219"
serde_json = "1.0.145"
serde_urlencoded = "0.7.1"
tokio = { version = "1.47.1", features = ["full"] }
tokio-cron-scheduler = "0.15.1"
tokio-postgres = "0.7.13"
tower = "0.5.2"
tower-cookies = "0.11.0"
tower-http = { version = "0.6.6", features = ["fs", "normalize-path", "compression-gzip", "compression-zstd", "compression-deflate", "compression-br"] }
tree_magic_mini = "3.2.2"
urlencoding = "2.1.3"
webp = "0.3.1"
